--- a/templates/email.html
+++ b/templates/email.html
@@ -2,52 +2,92 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>이메일 인증</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body style="font-family: 'Gothic A1', 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif; background-color: #fff; margin: 0; padding: 0;">
-    <div style="max-width: 600px; margin: auto; padding: 40px 30px; border: 1px solid #eee; text-align: left;">
-      
+  <body
+    style="
+      font-family: 'Gothic A1', 'Inter', 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;
+      background-color: #fff;
+      margin: 0;
+      padding: 0;
+    "
+  >
+    <div style="max-width: 600px; margin: auto; padding: 16px 100px; border: 1px solid #eee">
       <!-- 로고 (두 개 나란히) -->
-      <div style="margin-bottom: 20px;">
-        <img src="https://raw.githubusercontent.com/WhatDoYouSing/WhatDoYouSing-App-Back/main/assets/logo.png" alt="왓두유씽 로고1" style="height: 36px; vertical-align: middle; margin-right: 10px;" />
-        <img src="https://raw.githubusercontent.com/WhatDoYouSing/WhatDoYouSing-App-Back/main/assets/word-mark.png" alt="왓두유씽 로고2" style="height: 28px; vertical-align: middle;" />
+      <div
+        style="
+          height: 100px;
+          padding: 10px 0px 6px;
+          box-sizing: border-box;
+          display: flex;
+          align-items: center;
+          gap: 16px;
+          border-bottom: 4px solid #ff005c;
+        "
+      >
+        <img
+          src="https://raw.githubusercontent.com/WhatDoYouSing/WhatDoYouSing-App-Back/main/assets/logo.png"
+          alt="왓두유씽 로고"
+          style="width: 48px"
+        />
+        <img
+          src="https://raw.githubusercontent.com/WhatDoYouSing/WhatDoYouSing-App-Back/main/assets/word-mark.png"
+          alt="왓두유씽 워드마크"
+          style="height: 30px"
+        />
       </div>
 
-      <!-- 구분선 -->
-      <div style="width: 100%; height: 3px; background-color: #FF005C; margin-top: 10px; margin-bottom: 30px; "></div>
-      
-      <div style="margin-left: 30px;">
+      <div style="padding: 40px; display: flex; flex-direction: column; gap: 30px">
         <!-- 제목 -->
-        <h2 style="color: #33292C; margin-bottom: 10px;">왓두유씽 이메일 주소 인증이 도착했어요!</h2>
+        <h2 style="margin: 0; color: #33292c; font-size: 22px; font-weight: 700; line-height: 28px">
+          왓두유씽 이메일 주소 인증이 도착했어요!
+        </h2>
 
-        
-        <!-- 서브 타이틀 -->
-        <p style="font-size: 16px; margin-top: 20px; margin-bottom: 20px; color: #33292C;">
-            왓두유씽에 오신 것을 환영해요!
-        </p>
+        <div
+          style="
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+            color: #33292c;
+            font-size: 16px;
+            line-height: 24px;
+            letter-spacing: 0.1px;
+          "
+        >
+          <!-- 서브 타이틀 -->
+          <p style="margin: 0; font-weight: 600">왓두유씽에 오신 것을 환영해요!</p>
 
-        <!-- 본문 -->
-        <p style="font-size: 14px; color: #33292C; line-height: 1.7;">
-            왓두유씽 회원가입을 위해 이메일 주소 인증 요청을 해 주셔서 감사합니다. <br>
+          <!-- 본문 -->
+          <p style="margin: 0; font-weight: 400">
+            왓두유씽 회원가입을 위해 이메일 주소 인증 요청을 해 주셔서 감사합니다.<br />
             아래 버튼을 클릭하여 회원가입 절차를 진행해 주세요 :)
-        </p>
+          </p>
+        </div>
 
         <!-- 인증 버튼 -->
-        <div style="margin-top: 20px; margin-bottom: 30px;">
-            <a href="{{ verification_link }}" style="background-color: #33292C; color: #F5EDF0; padding: 12px 24px; border-radius: 2px; text-decoration: none; display: inline-block;">
-            이메일 주소 인증하기
-            </a>
-        </div>
+        <a
+          href="{{ verification_link }}"
+          style="
+            display: inline-block;
+            width: 260px;
+            padding: 16px 0;
+            text-align: center;
+            background-color: #33292c;
+            border-radius: 2px;
 
-        <!-- 대체 링크 안내 -->
-        <p style="font-size: 13px; color: #33292C;">
-            버튼이 정상적으로 클릭되지 않는다면, 아래 링크를 통해 접속해 주세요.
-        </p>
-
-        <!-- 대체 링크 -->
-        <div style="background-color: #f9f9f9; padding: 15px; border: 1px solid #ccc; word-break: break-all; font-size: 13px; color: #444;">
-            {{ verification_link }}
-        </div>
+            color: #f5edf0;
+            font-size: 16px;
+            font-weight: 500;
+            text-decoration: none;
+          "
+        >
+          이메일 주소 인증하기
+        </a>
       </div>
     </div>
   </body>
