--- a/templates/email_verified.html
+++ b/templates/email_verified.html
@@ -22,6 +22,6 @@
   <h2>이메일 인증이 완료되었습니다 ✅</h2>
   <p><strong>{{ email }}</strong> 이메일 인증이 정상적으로 완료되었습니다.</p>
   <p>앱으로 돌아가 회원가입을 마무리해주세요.</p>
-  <a class="button" href="whatdoyousing://email-verified?email={{ email }}">앱에서 계속하기</a>
+  <a class="button" href="whatdoyousing://auth/signup?cur_step=4&verifyed_email={{email}}">앱에서 계속하기</a>
 </body>
 </html>
