--- a/templates/email.html
+++ b/templates/email.html
@@ -4,31 +4,55 @@
     <meta charset="UTF-8" />
     <title>이메일 인증</title>
   </head>
-  <body style="font-family: 'Gothic A1', 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif; background-color: #fff; margin: 0; padding: 0;">
-    <div style="max-width: 600px; margin: auto; padding: 40px 30px; border: 1px solid #eee; text-align: left;">
-      
+  <body
+    style="
+      font-family: 'Gothic A1', 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;
+      background-color: #fff;
+      margin: 0;
+      padding: 0;
+    "
+  >
+    <div
+      style="
+        max-width: 600px;
+        margin: auto;
+        padding: 40px 30px;
+        border: 1px solid #eee;
+        text-align: left;
+      "
+    >
       <!-- 로고 (두 개 나란히) -->
-      <div style="margin-bottom: 20px;">
-        <img src="https://raw.githubusercontent.com/WhatDoYouSing/WhatDoYouSing-App-Back/main/assets/logo.png" alt="왓두유씽 로고1" style="height: 36px; vertical-align: middle; margin-right: 10px;" />
-        <img src="https://raw.githubusercontent.com/WhatDoYouSing/WhatDoYouSing-App-Back/main/assets/word-mark.png" alt="왓두유씽 로고2" style="height: 28px; vertical-align: middle;" />
+      <div style="margin-bottom: 20px">
+        <img
+          src="https://raw.githubusercontent.com/WhatDoYouSing/WhatDoYouSing-App-Back/main/assets/logo.png"
+          alt="왓두유씽 로고1"
+          style="height: 36px; vertical-align: middle; margin-right: 10px"
+        />
+        <img
+          src="https://raw.githubusercontent.com/WhatDoYouSing/WhatDoYouSing-App-Back/main/assets/word-mark.png"
+          alt="왓두유씽 로고2"
+          style="height: 28px; vertical-align: middle"
+        />
       </div>
 
       <!-- 구분선 -->
-      <div style="width: 100%; height: 3px; background-color: #FF005C; margin-top: 10px; margin-bottom: 30px; "></div>
-      
-      <div style="margin-left: 30px;">
+      <div
+        style="width: 100%; height: 3px; background-color: #ff005c; margin-top: 10px"
+      ></div>
+
+      <div style="padding: 40px; display: flex; flex-direction: column; gap: 30px">
         <!-- 제목 -->
-        <h2 style="color: #33292C; margin-bottom: 10px;">왓두유씽 이메일 주소 인증이 도착했어요!</h2>
-        
+        <h2 style="margin: 0; color: #33292c">왓두유씽 이메일 주소 인증이 도착했어요!</h2>
+
         <!-- 서브 타이틀 -->
-        <p style="font-size: 16px; margin-top: 20px; margin-bottom: 20px; color: #33292C;">
-            왓두유씽에 오신 것을 환영해요!
-        </p>
+        <!-- <p style="font-size: 16px; margin-top: 20px; margin-bottom: 20px; color: #33292c">
+          왓두유씽에 오신 것을 환영해요!
+        </p> -->
 
         <!-- 본문 -->
-        <p style="font-size: 14px; color: #33292C; line-height: 1.7;">
-            왓두유씽 회원가입을 위해 이메일 주소 인증 요청을 해 주셔서 감사합니다. <br>
-            앱으로 돌아가 아래의 인증코드를 입력하고 회원가입을 완료해 주세요.
+        <p style="margin: 0; font-size: 14px; color: #33292c; line-height: 1.7">
+          왓두유씽 회원가입을 위해 이메일 주소 인증 요청을 해 주셔서 감사합니다. <br />
+          앱으로 돌아가 아래의 인증코드를 입력하고 회원가입을 완료해 주세요.
         </p>
 
         <!-- 인증 버튼 -->
@@ -38,17 +62,28 @@
             </a>
         </div-->
 
-        <div style="margin-top: 20px; margin-bottom: 30px;">
-          <div style="background-color: #F5EDF0; color: #33292C; padding: 12px 24px; border-radius: 2px; display: inline-block; font-size: 20px; font-weight: bold; letter-spacing: 4px;">
-            {{ code }}
-          </div>
+        <div
+          style="
+            background-color: #f5edf0;
+            color: #33292c;
+            padding: 12px 24px;
+            border-radius: 2px;
+            display: block;
+            width: 100%;
+            font-size: 20px;
+            font-weight: bold;
+            letter-spacing: 4px;
+            box-sizing: border-box;
+            text-align: center;
+          "
+        >
+          {{ code }}
         </div>
 
-        <p style="font-size: 14px; color: #33292C; line-height: 1.7;">
-            해당 인증코드는 5분 동안 유효합니다. <br>
-            인증코드가 만료된 경우에는 앱에서 '인증코드 재발송' 버튼을 눌러주세요.
+        <p style="margin: 0; font-size: 14px; color: #33292c; line-height: 1.7">
+          해당 인증코드는 5분 동안 유효합니다. <br />
+          인증코드가 만료된 경우에는 앱에서 '인증코드 재발송' 버튼을 눌러주세요.
         </p>
-
       </div>
     </div>
   </body>
