--- a/templates/email-original.html
+++ b/templates/email-original.html
@@ -40,25 +40,27 @@
         style="width: 100%; height: 3px; background-color: #ff005c; margin-top: 10px"
       ></div>
 
-      <div style="padding: 40px">
+      <div style="padding: 40px; display: flex; flex-direction: column; gap: 30px">
         <!-- 제목 -->
-        <h2 style="margin: 0; color: #33292c; margin-bottom: 30px">
-          왓두유씽 이메일 주소 인증이 도착했어요!
-        </h2>
+        <h2 style="margin: 0; color: #33292c">왓두유씽 이메일 주소 인증이 도착했어요!</h2>
+
+        <!-- 서브 타이틀 -->
+        <!-- <p style="font-size: 16px; margin-top: 20px; margin-bottom: 20px; color: #33292c">
+          왓두유씽에 오신 것을 환영해요!
+        </p> -->
 
         <!-- 본문 -->
-        <p
-          style="
-            margin: 0;
-            font-size: 14px;
-            color: #33292c;
-            line-height: 1.7;
-            margin-bottom: 30px;
-          "
-        >
+        <p style="margin: 0; font-size: 14px; color: #33292c; line-height: 1.7">
           왓두유씽 회원가입을 위해 이메일 주소 인증 요청을 해 주셔서 감사합니다. <br />
           앱으로 돌아가 아래의 인증코드를 입력하고 회원가입을 완료해 주세요.
         </p>
+
+        <!-- 인증 버튼 -->
+        <!--div style="margin-top: 20px; margin-bottom: 30px;">
+            <a href="{{ verification_link }}" style="background-color: #33292C; color: #F5EDF0; padding: 12px 24px; border-radius: 2px; text-decoration: none; display: inline-block;">
+            이메일 주소 인증하기
+            </a>
+        </div-->
 
         <div
           style="
@@ -73,7 +75,6 @@
             letter-spacing: 4px;
             box-sizing: border-box;
             text-align: center;
-            margin-bottom: 30px;
           "
         >
           {{ code }}
